--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,15 @@
             android:name=".CreateJoinActivity"
             android:exported="true" />
         <activity
+            android:name=".RestaurantActivity"
+            android:exported="true" />
+        <activity
+            android:name=".RestaurantActivity_HomeActivity" android:windowSoftInputMode="stateHidden"
+            android:exported="true" />
+        <activity
+            android:name=".ViewHolderRestaurant"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
