--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:name=".LoginActivity"
             android:exported="true" />
         <activity
+            android:name=".CategoryActivity"
+            android:exported="true" />
+        <activity
             android:name=".CreateJoinActivity"
             android:exported="true" />
         <activity
